# VSidoConnServer

./: .gitignore  Build.UT.mk  Build.mk  CMakeLists.txt  LICENSE  Makefile  README.md
3dpart/websockets/lib/: lws-plat-unix.c
3dpart/websockets/object/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LibwebsocketsConfig.cmake  LibwebsocketsTargets.cmake  cmake_install.cmake  libwebsockets-test-server.key.pem  libwebsockets-test-server.pem  lws_config.h
VSidoClient/: CMakeLists.txt
VSidoClient/JSON/: Doxyfile  JSON_API.md
VSidoClient/JSON.Server.Config/: Doxyfile  JSON_Server_Config_API.md
VSidoClient/javascript/: index.html  vsido.client.api.js  vsido.web.js  yuidoc.json
VSidoClient/javascript.Server.Config/: index.html  vsido.client.config.js  yuidoc.json
VSidoClient/javascript.Server.Config/simple/: theme.json
VSidoCommand/: CMakeLists.txt  Makefile
VSidoCommand/cpp/: CMakeLists.txt  Doxyfile  VSidoConnect.hpp  VSidoConnectFeedBack.cpp  VSidoConnectIK.cpp  VSidoConnectIO.cpp  VSidoConnectInner.hpp  VSidoConnectMisc.cpp  VSidoConnectResponse.cpp  VSidoConnectServoInfo.cpp  VSidoConnectVID.cpp  debug.h
VSidoCommand/cpp/linux/: VSidoConnectBaseIO.cpp  VSidoConnectUartConnect.cpp
VSidoCommand/cpp/mac/: VSidoConnectBaseIO.cpp
VSidoCommand/cpp/uart_termios/: VSidoConnectUartConnect.hpp  VSidoConnectUartRead.cpp  VSidoConnectUartRead.hpp  VSidoConnectUartSend.cpp
VSidoCommand/cpp/win/: VSidoConnectBaseIO.cpp
VSidoConnect/: VSidoConnect.i
VSidoConnect/cpp/: CMakeLists.txt  Doxyfile  VSido.hpp  VSidoConnect.hpp  VSidoConnectFeedBack.cpp  VSidoConnectIO.cpp  VSidoConnectMisc.cpp  VSidoConnectResponse.cpp  VSidoConnectScript.cpp  VSidoConnectServoInfo.cpp  VSidoConnectVID.cpp  debug.h  sampleAll.cpp  vsido_servo_info_table.hpp  vsido_vid_table.hpp
VSidoConnect/cpp/linux/: VSidoConnectBaseIO.cpp  VSidoConnectUartConnect.cpp
VSidoConnect/cpp/mac/: VSidoConnectBaseIO.cpp  VSidoConnectUartConnect.cpp
VSidoConnect/cpp/uart_termios/: VSidoConnectUartRead.cpp  VSidoConnectUartRead.hpp  VSidoConnectUartSend.cpp  VSidoConnectUartSend.hpp
VSidoConnect/java/: AckResponse.java  AngleRequest.java  CMakeLists.txt  ComplianceRequest.java  MinMaxAngleRequest.java  Request.java  Response.java  SWIGTYPE_p_listT_unsigned_char_t.java  SWIGTYPE_p_mapT_unsigned_char_listT_tupleT_std__string_int_t_t_t.java  ServoInfoRequest.java  ServoInfoResponse.java  VSidoConnect.java  VSidoConnectJNI.java  VSidoConnect_wrap.cxx
VSidoConnect/lua/: CMakeLists.txt  VSidoConnect_wrap.cxx
VSidoConnect/nodejs/: CMakeLists.txt  VSidoConnect_wrap.cxx
VSidoConnect/php/: CMakeLists.txt  VSidoConnect.php  VSidoConnect_wrap.cpp  php_VSidoConnect.h
VSidoConnect/python/: CMakeLists.txt  VSidoConnect.py  VSidoConnect_wrap.cxx
VSidoConnect/ruby/: CMakeLists.txt  VSido.rb  VSidoConnect_wrap.cxx  sampleAngle.rb  sampleServoInfo.rb
VSidoMotion/: CMakeLists.txt
VSidoMotion/data/: dance.xml
VSidoMotion/include/: VSidoMotion.hpp
VSidoMotion/src/: CMakeLists.txt  DanceWithMusic.hpp  VSidoMotion.cpp
VSidoMotion/test/: CMakeLists.txt  main.cpp
VSidoService/: CMakeLists.txt  Doxyfile  Makefile  VSido.srv.start  bt.bind  bt.bind2  bt_watchdog.cpp  bt_watchdog.hpp  btsetup  cmd_acceleration.cpp  cmd_acceleration.hpp  cmd_angle.cpp  cmd_angle.hpp  cmd_bind_bt.cpp  cmd_bind_bt.hpp  cmd_common.cpp  cmd_common.hpp  cmd_compliance.cpp  cmd_compliance.hpp  cmd_feedback.cpp  cmd_feedback.hpp  cmd_gpio.cpp  cmd_gpio.hpp  cmd_ik.cpp  cmd_ik.hpp  cmd_ng_param.cpp  cmd_ng_param.hpp  cmd_parser.cpp  cmd_parser.hpp  cmd_ping.cpp  cmd_ping.hpp  cmd_pulse.cpp  cmd_pulse.hpp  cmd_raw.cpp  cmd_raw.hpp  cmd_scan_bt.cpp  cmd_scan_bt.hpp  cmd_serial.cpp  cmd_serial.hpp  cmd_servo_info.cpp  (+96 more)
VSidoService/linux/: uart_connect.cpp
VSidoService/mac/: uart_connect.cpp
VSidoWeb/: CMakeLists.txt  web.debug.sh  web.server.new.sh
VSidoWeb/WebServer/: WebServer.js  index.html
VSidoWeb/WebServer/acc/: index.html
VSidoWeb/WebServer/angle/: index.html
VSidoWeb/WebServer/camera/: index.html
VSidoWeb/WebServer/compliance/: index.html
VSidoWeb/WebServer/connection/: index.html
VSidoWeb/WebServer/console/: index.html
VSidoWeb/WebServerNew/: index.html
VSidoWeb/conf/: vsidoweb
VSidoWeb/debug/: WebServer.js  index.html
test/VSidoCommand/: CMakeLists.txt  io_connect.cpp  io_dump.cpp  parser_ConnectIO.cpp  parser_acceleration_request.cpp  parser_feedback_id_request.cpp  parser_feedback_request.cpp  parser_ik_response.cpp  parser_joint_request.cpp  parser_minmax_request.cpp  parser_servoInfo_request.cpp  parser_servoInfo_response.cpp  parser_stub_uart.cpp  parser_voltage_request.cpp  parser_write_flash_request.cpp
test/VSidoConnect/: CMakeLists.txt  io_dump.hpp  io_main.cpp  parser_ExecRequest.cpp  parser_acceleration_request.cpp  parser_acceleration_responese.cpp  parser_angle_ack.cpp  parser_angle_request.cpp  parser_compliance_request.cpp  parser_dump.cpp  parser_dump.hpp  parser_feedback_id_request.cpp  parser_feedback_request.cpp  parser_feedback_response.cpp  parser_getVID_request.cpp  parser_getVID_response.cpp  parser_gpio_request.cpp  parser_ik_request.cpp  parser_ik_response.cpp  parser_joint_request.cpp  parser_joint_response.cpp  parser_minmax_request.cpp  parser_pwm_request.cpp  parser_raw_request.cpp  parser_raw_response.cpp  parser_servoInfo_request.cpp  parser_servoInfo_response.cpp  parser_setVID_request.cpp  parser_voltage_request.cpp  parser_voltage_responese.cpp  parser_walk_request.cpp  parser_write_flash_request.cpp
test/VSidoService/: CMakeLists.txt  Makefile  VSidoService.mk  main.cpp  test_acceleration.cpp  test_angle.cpp  test_bt.cpp  test_compliance.cpp  test_dump.cpp  test_dump.hpp  test_feedback.cpp  test_gpio.cpp  test_ik.cpp  test_ng_param.cpp  test_ping.cpp  test_pwm.cpp  test_raw.cpp  test_request_acceleration.cpp  test_request_angle.cpp  test_request_compliance.cpp  test_response_angle.cpp  test_response_ik.cpp  test_serial.cpp  test_servo_info.cpp  test_uart.cpp  test_uart.hpp  test_var.cpp  test_voltage.cpp  test_walk.cpp  test_wrapper.cpp  test_write_flash.cpp
(+67 files in other folders)
